# conan_cmake_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  scratchbook.txt
apps/: omni.app.kit.dev.kit
debug_serving_server/: README.md  encode_url_for_packman.sh  server.py
omni.example.deps/plugins/omni.example.deps/: ExampleDepsExtension.cpp
omni.example.deps/python/: __init__.py
omni.hello.world/: premake5.lua
omni.hello.world/bindings/: ExampleBindings.cpp
omni.hello.world/config/: extension.toml
omni.hello.world/docs/: CHANGELOG.md  Overview.md
omni.hello.world/include/omni/hello/world/: IExampleCarbInterface.h
omni.hello.world/plugins/: ExampleExtension.cpp
omni.hello.world/python/: __init__.py  example_deps_extension.py  hello_world_extension.py
omni.hello.world/python/scripts/: hello_world_extension.py
tools/: OVFilesystemHelper.cmake
